syntax = "proto3";

import "grant.proto";
import "meta.proto";
import "reference.proto";
import "stores.proto";

package api;

option go_package = "github.com/monax/hoard/v7/api";

service Grant {
    // Seal a Reference to create a Grant
    rpc Seal (ReferenceAndGrantSpec) returns (grant.Grant);

    // Unseal a Grant to recover the Reference
    rpc Unseal (grant.Grant) returns (reference.Ref);

    // Convert one grant to another grant to re-share with another party or just
    // to change grant type
    rpc Reseal (GrantAndGrantSpec) returns (grant.Grant);

    // Put a Plaintext and returned the sealed Reference as a Grant
    rpc PutSeal (stream PlaintextAndGrantSpec) returns (grant.Grant);

    // Unseal a Grant and follow the Reference to return a Plaintext
    rpc UnsealGet (grant.Grant) returns (stream Plaintext);

    // Unseal a Grant and follow the Reference to delete the Plaintext
    rpc UnsealDelete (grant.Grant) returns (Address);
}

// Provide plaintext and get plaintext back
service Cleartext {
    // Push some plaintext data into storage and get its deterministically
    // generated secret reference.
    rpc Put (stream Plaintext) returns (reference.Ref);

    // Provide a secret reference to an encrypted blob and get the plaintext
    // data back.
    rpc Get (reference.Ref) returns (stream Plaintext);
}

// Deterministic encryption
service Encryption {
    // Encrypt some data and get its deterministically generated
    // secret reference including its address without storing the data.
    rpc Encrypt (stream Plaintext) returns (stream ReferenceAndCiphertext);

    // Decrypt the provided data by supplying it alongside its secret
    // reference. The address is not used for decryption and may be omitted.
    rpc Decrypt (stream ReferenceAndCiphertext) returns (stream Plaintext);
}

// Interact directly with storage backend
service Storage {
    // Insert the (presumably) encrypted data provided and get the its address.
    rpc Push (stream Ciphertext) returns (Address);

    // Retrieve the (presumably) encrypted data stored at address.
    rpc Pull (Address) returns (stream Ciphertext);

    // Get some information about the encrypted blob stored at an address,
    // including whether it exists.
    rpc Stat (Address) returns (stores.StatInfo);

    // Delete the encrypted blob stored at address
    rpc Delete (Address) returns (Address);
}

service Document {
    // GET a document from Hoard
    rpc Download (grant.Grant) returns (stream PlaintextAndMeta) {
    }

    // POST a document into Hoard
    rpc Upload (stream PlaintextAndGrantSpecAndMeta) returns (grant.Grant) {
    }
}

message GrantAndGrantSpec {
    grant.Grant Grant = 1;
    // The type of grant to output
    grant.Spec GrantSpec = 2;
}

message PlaintextAndGrantSpec {
    Plaintext Plaintext = 1;
    // The type of grant to output
    grant.Spec GrantSpec = 2;
}

message PlaintextAndMeta {
    meta.Meta Meta = 1;
    Plaintext Plaintext = 2;
}

message PlaintextAndGrantSpecAndMeta {
    meta.Meta Meta = 1;
    PlaintextAndGrantSpec PlaintextAndGrantSpec = 2;
}

message ReferenceAndGrantSpec {
    reference.Ref Reference = 1;
    // The type of grant to output
    grant.Spec GrantSpec = 2;
}

message Plaintext {
    bytes Data = 1;
    bytes Salt = 2;
}

message Ciphertext {
    bytes EncryptedData = 1;
}

message ReferenceAndCiphertext {
    reference.Ref Reference = 1;
    Ciphertext Ciphertext = 2;
}

message Address {
    bytes Address = 1;
}
